# learning-sql-notes

./: .Rprofile  .env.example  .gitignore  Dockerfile  LICENSE.html  LICENSE.md  Makefile  README.html  README.md  create_professional_structure.sh  create_professional_structure.sh.backup  create_rstudio_project.sh  docker-compose.yml  fix_and_complete_structure.sh  package.json  pyproject.toml  requirements.txt  setup_learning_sql.sh  setup_r_environment.R  setup_r_project.R
.github/workflows/: ci.yml  docs.yml
R/: main.R
config/database/: mysql.cnf  postgresql.conf  sqlite.config
config/environments/: development.env  production.env
databases/migrations/: V1__initial.sql  V2__add_indexes.sql  V3__stored_procedures.sql
databases/schemas/sakila/: create_tables.sql
databases/scripts/: backup.sh  performance_test.sh  restore.sh
docs/: _quarto.yml  index.qmd
docs/rmarkdown/tutorials/: sql_basics_with_r.Rmd
exercises/sql/basic/01_select_statements/: problem.md
latex/: main.tex  preamble.tex
notebooks/sql/: basics.ipynb
src/python/database/sqlalchemy/: models.py
src/sql/basics/01_select/: examples.sql
tests/unit/python/: test_basics.py
tools/database/: simple_query.py
