[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-sql-notes"
version = "0.1.0"
description = "Comprehensive SQL learning with multiple programming language integrations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Emanuel", email = "emanuel@example.com"}
]
keywords = ["sql", "database", "learning", "python", "r", "java", "javascript", "cpp", "c"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/emanuel/learning-sql-notes"
Repository = "https://github.com/emanuel/learning-sql-notes.git"
"Bug Tracker" = "https://github.com/emanuel/learning-sql-notes/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

database = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "mysql-connector-python>=8.0",
    "pandas>=2.0",
    "sqlite-utils>=3.0",
]

docs = [
    "jupyter>=1.0",
    "quarto>=1.0",
    "sphinx>=7.0",
    "myst-parser>=2.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

